compiler/fir/analysis-tests/testData/resolve/contextParameters/inferringContextOfType.kt
// RUN_PIPELINE_TILL: FRONTEND
// LANGUAGE: +ContextParameters
// ISSUE: KT-76773
// WITH_STDLIB

class Klass

context(_: Klass) fun foo() {
    <!CANNOT_INFER_PARAMETER_TYPE, NEW_INFERENCE_NO_INFORMATION_FOR_PARAMETER!>contextOf<!>()
}